# Ojas

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  fyi.md  implementation_plan.md  start.bat  start.sh
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_core_tables.py  0003_v02_ai_tables.py  0004_strip_ai.py  0005_ai_columns.py  0006_consultations.py  7de6e7320caa_add_parent_id_to_artifacts.py  8fd8901a9607_add_consultation_messages_table.py  985e3c8567e6_add_appointments_table.py  b3ccf3b475bd_add_summary_text_suggested_questions_.py
apps/api/src/ojas/: config.py  main.py
apps/api/src/ojas/core/: audit.py  deps.py  errors.py  logging.py
apps/api/src/ojas/db/: __init__.py  base.py  session.py
apps/api/src/ojas/models/: __init__.py  appointment.py  artifact.py  audit_log.py  clinic.py  consultation.py  patient.py  user.py
apps/api/src/ojas/repositories/: __init__.py  artifact_repository.py  patient_repository.py
apps/api/src/ojas/routes/: ai.py  appointments.py  artifacts.py  consultations.py  health.py  patients.py
apps/api/src/ojas/schemas/: __init__.py  appointment.py  artifact.py  consultation.py  patient.py
apps/api/src/ojas/services/: __init__.py  artifact_service.py  consolidation_service.py  labeling_service.py  llm_service.py  ocr_service.py  patient_service.py  stt_deepgram.py
apps/api/src/ojas/storage/: base.py
apps/api/src/ojas/stt/: __init__.py  base.py  local_client.py  stub_client.py
apps/api/src/ojas/utils/: json_helper.py  llm_client.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_artifacts.py  test_patients.py
apps/web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  (+2 more)
backend/: .env.example  config.py  database.py  init_db.py  main.py  models.py  requirements.txt  seed_users.py
docs/: architecture.md  data-model.md
frontend/: README.md  index.html
scripts/: bootstrap_db.sh  reset_local.sh  seed_dev_data.py
(+59 files in other folders)
